修改了向openim获取群组信息的接口